codes updated to resolve the problem navigating back after adding on database tho it isn't resolved yet

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/todoListFragment">
 
     <fragment
         android:id="@+id/todoListFragment"
-        android:name="com.example.todoapp.fragment.TodoDetailFragment"
-        android:label="Todo List Fragment">
+        android:name="com.example.todoapp.fragment.TodoListFragment"
+        android:label="Todo List Fragment"
+        tools:layout="@layout/fragment_todo_list">
 
         <action
             android:id="@+id/action_todoListFragment_to_todoDetailFragment"
@@ -17,9 +20,18 @@
     <fragment
         android:id="@+id/todoDetailFragment"
         android:name="com.example.todoapp.fragment.TodoDetailFragment"
-        android:label="Todo Detail Fragment">
+        android:label="Todo Detail Fragment"
+        tools:layout="@layout/fragment_todo_detail" />
 
-        <!-- Other fragment attributes and destinations -->
+    <fragment
+        android:id="@+id/addTodoFragment"
+        android:name="com.example.todoapp.fragment.AddTodoFragment"
+        android:label="Add Todo"
+        tools:layout="@layout/fragment_add_todo">
+
+        <action
+            android:id="@+id/action_addTodoFragment_to_todoListFragment"
+            app:destination="@id/todoListFragment" />
 
     </fragment>
 
