--- a/app/src/main/res/layout/fragment_todo_detail.xml
+++ b/app/src/main/res/layout/fragment_todo_detail.xml
@@ -16,17 +16,24 @@
         android:id="@+id/editDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="Detail" />
 
-    <EditText
-        android:id="@+id/editDate"
+    <Button
+        android:id="@+id/btnSelectDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Date" />
+        android:layout_below="@id/edit_text_detail"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
+        android:drawablePadding="8dp"
+        android:text="@string/select_date" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
         <Button
