--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -33,6 +33,7 @@
         android:layout_marginTop="16dp"
         android:drawableLeft="@android:drawable/ic_menu_my_calendar"
         android:drawablePadding="8dp"
+        android:textColor="@color/black"
         android:text="@string/select_date" />
 
     <Button
@@ -42,6 +43,8 @@
         android:layout_below="@id/button_select_date"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
+        android:textColor="@color/black"
+
         android:text="@string/add_todo" />
 
 </RelativeLayout>
