--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,9 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:theme">@style/Animation.Design.BottomSheetDialog</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
