--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:titleTextColor">@color/colorForeground</item>
         <item name="android:theme">@style/Animation.Design.BottomSheetDialog</item>
         <!-- Customize your theme here. -->
     </style>
