--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,13 +21,9 @@
         android:layout_below="@id/todoIcon"
         android:layout_marginTop="16dp"
         android:text="Todo App"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
-
         android:textStyle="bold" />
-
-
-    <!-- Add any additional views or branding elements for your splash screen -->
 
 </RelativeLayout>
 
