--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
         <item name="android:titleTextColor">@color/colorForeground</item>
-        <item name="android:theme">@style/Animation.Design.BottomSheetDialog</item>
+        <item name="statusBarForeground">@color/black</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
