about of the application added

--- a/app/src/main/res/menu/back_menu.xml
+++ b/app/src/main/res/menu/back_menu.xml
@@ -6,5 +6,6 @@
         android:id="@+id/menu_back"
         android:title="Back"
         android:icon="@drawable/ic_back"
+        android:iconTint="@color/white"
         app:showAsAction="ifRoom|withText"/>
 </menu>
